--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,16 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+body {
+  margin: 0;
+  font-family: sans-serif;
+  background-color: #f5f5f5;
+}
+
+input, button {
+  font-size: 1rem;
+}
+
 
 a {
   font-weight: 500;
